[package]
name = "docwatch"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
include_dir = "0.7"

[dependencies]
axum = "0.6"
axum-macros = "0.3.0"
axum-extra = { version = "0.7", features = ["cookie"] }
tokio = { version = "1", features = ["full"] }
tower-cookies = "0.8"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls", "macros", "uuid"] }
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
include_dir = "0.7"
mime_guess = "2"
argon2 = "0.5"
password-hash = "0.5"
rand_core = "0.6"  # required by argon2
rand = "0.8"           # gives you OsRng and other useful things... also needed for rand_core import? keep
clap = { version = "4", features = ["derive"] }
rpassword = "7"
http = "0.2"  # explicitly force same http crate version
chrono = "0.4"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1"
urlencoding = "2"
tiny_http = "0.12.0"
webbrowser = "1.0.4"
dotenv = "0.15.0"
diff = "0.1"
anyhow = "1.0.98"

[[bin]]
name = "authctl"
path = "src/bin/authctl.rs"
